--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="row">
-        <div class="col-xs-4">.col-xs-2</div>
-        <div class="col-xs-4">.col-xs-4</div>
-        <div class="col-xs-4">.col-xs-6</div>
+        <div class="col-xs-4 card">.col-xs-2</div>
+        <div class="col-xs-4 card">.col-xs-4</div>
+        <div class="col-xs-4 card">.col-xs-6</div>
      </div>
     
 </body>
